Modified web contents

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Happy Valentine's Day!! Yeee! Love and blah blah...
+            What kind of Valentine's Day gifts would be favored by an INTJ?
           </p>
           <p class="fake-btn">Send</p>
         </div>
@@ -51,7 +51,7 @@
       <div class="six">
         <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day Gorgeous</h3>
+          <h3 class="wish-hbd">Happy Valentine's Day Handsome</h3>
           <h5 id="wishText">kuch kuch</h5>
         </div>
       </div>
@@ -124,7 +124,7 @@
         </svg>
       </div>
       <div class="nine">
-        <p>Okay, now come back and tell me if you liked it.</p>
+        <p>Okay, now come to tell me how you feel.</p>
         <p id="replay">Or click, if you want to watch it again.</p>
         <p class="last-smile">:)</p>
       </div>
