Change html file

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <div class="one">
         <h1 class="one">
           Hey
-          <span id="name">xyz</span>
+          <span id="name">my little Liu</span>
         </h1>
-        <p class="two" id="greetingText">I really like your name btw!</p>
+        <p class="two" id="greetingText">It's my first Valentine's Day</p>
       </div>
       <div class="three">
         <p>It's Valentine!!! :D</p>
@@ -49,10 +49,10 @@
         </p>
       </div>
       <div class="six">
-        <img src="img/vector.jpg" alt="" class = "girl-dp" id="imagePath" />
+        <img src="img/liu.jpg" alt="" class = "girl-dp" id="imagePath" />
         <div class="wish">
           <h3 class="wish-hbd">Happy Valentine's Day Handsome</h3>
-          <h5 id="wishText">kuch kuch</h5>
+          <h5 id="wishText">There’s nothing we can’t overcome as long as we possess the greatest power on earth.</h5>
         </div>
       </div>
       <div class="seven">
